{
    "name": "Controls",
    "maps": [
        {
            "name": "Default",
            "id": "3487e429-a99b-48e2-a2e4-cf9be0ddcebd",
            "actions": [
                {
                    "name": "FlipL",
                    "type": "Button",
                    "id": "83345ea2-4675-4c12-9625-a4d2733d2314",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FlipR",
                    "type": "Button",
                    "id": "4b8e92aa-713e-457a-9463-6775e0ef4ab8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LaunchB",
                    "type": "Button",
                    "id": "b06ebd35-02e2-41b3-a04c-b9bc3807264d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ExtraR",
                    "type": "Button",
                    "id": "efd06694-ca9e-42b3-b1c9-744389bf41a7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ExtraL",
                    "type": "Button",
                    "id": "d2e0e585-128f-4e79-b979-ba909e6955a4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e8304716-c393-4ba1-add2-a94353de1b4f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FlipL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b18cad32-e9d9-4a87-ba61-993ea131fb6d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FlipR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "10444a4e-f61f-4da5-892b-3ab96b50849e",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LaunchB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c3667b0c-d896-4183-b3ff-ad4958daa9b2",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LaunchB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1dedaacb-03ed-4894-9ce3-eb7548dd0355",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ExtraR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd36af16-2047-4417-acdc-b2f8ecb6d4f2",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ExtraL",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}